--- a/ansible-trac/trac.yml
+++ b/ansible-trac/trac.yml
@@ -4,6 +4,7 @@
   remote_user: root
 
   roles:
+    - { role: nginx, tags: nginx }
     - { role: apache2, tags: apache2}
     - { role: mysql, tags: mysql }
     - { role: trac, tags: trac }
