--- a/ansible-trac/roles/nginx/tasks/main.yml
+++ b/ansible-trac/roles/nginx/tasks/main.yml
@@ -9,14 +9,9 @@
     name: nginx
     state: latest
 
-- name: delete default configuration file
-  file:
-    path: /etc/nginx/sites-enabled/default
-    state: absent
-
 - name: Create WebSite directory
   file: 
-      path: /data/wwwroot/trac/trac
+      path: /data/wwwroot/trac
       state: directory
       owner: www-data
       group: www-data
