--- a/php-app/roles/nextcloud/tasks/main.yml
+++ b/php-app/roles/nextcloud/tasks/main.yml
@@ -74,4 +74,17 @@
    copy: src=10-opcache.ini dest=/etc/php.d/
    notify: restart Apache
 
+- name: Databases Random Password
+  copy: 
+    src: init.sh
+    dest: /root/
+    mode: 0750
+
+- name: Setting Startup
+  lineinfile:
+    path: /etc/rc.d/rc.local
+    regexp: '/root/init.sh'
+    line: '/root/init.sh'
+    mode: 0750
+
 
