--- a/php-app/roles/owncloud/tasks/main.yml
+++ b/php-app/roles/owncloud/tasks/main.yml
@@ -57,3 +57,16 @@
     user: apache
     job: "php -f /data/wwwroot/owncloud/cron.php"
 
+- name: Databases Random Password
+  copy: 
+    src: init.sh
+    dest: /root/
+    mode: 0750
+
+- name: Setting Startup
+  lineinfile:
+    path: /etc/rc.d/rc.local
+    regexp: '/root/init.sh'
+    line: '/root/init.sh'
+    mode: 0750
+
