--- a/php-app/roles/zentaoPMS/tasks/main.yml
+++ b/php-app/roles/zentaoPMS/tasks/main.yml
@@ -13,12 +13,10 @@
     owner: apache
     group: apache
 
-
 - name: Remove example dir
   file:
     path: /data/wwwroot/www.example.com
     state: absent
-
     
 - name: Copy Apache Config
   template: src=vhost.conf dest=/etc/httpd/vhost
@@ -38,3 +36,16 @@
 
 - name: System Upgrade
   yum: name=* state=latest
+
+- name: Databases Random Password
+  copy: 
+    src: init.sh
+    dest: /root/
+    mode: 0750
+
+- name: Setting Startup
+  lineinfile:
+    path: /etc/rc.d/rc.local
+    regexp: '/root/init.sh'
+    line: '/root/init.sh'
+    mode: 0750
