--- a/php-app/roles/Magento/tasks/main.yml
+++ b/php-app/roles/Magento/tasks/main.yml
@@ -77,7 +77,19 @@
   
 - name: Permission file
   shell: find /data/wwwroot -not -type d -exec chmod 644 {} \;
-
   
 - name: System Upgrade
   yum: name=* state=latest
+
+- name: Databases Random Password
+  copy: 
+    src: init.sh
+    dest: /root/
+    mode: 0750
+
+- name: Setting Startup
+  lineinfile:
+    path: /etc/rc.d/rc.local
+    regexp: '/root/init.sh'
+    line: '/root/init.sh'
+    mode: 0750
