--- a/php-app/roles/discuz/tasks/main.yml
+++ b/php-app/roles/discuz/tasks/main.yml
@@ -65,3 +65,16 @@
 
 - name: System Upgrade
   yum: name=* state=latest
+
+- name: Databases Random Password
+  copy: 
+    src: init.sh
+    dest: /root/
+    mode: 0750
+
+- name: Setting Startup
+  lineinfile:
+    path: /etc/rc.d/rc.local
+    regexp: '/root/init.sh'
+    line: '/root/init.sh'
+    mode: 0750
