--- a/php-app/roles/dzzoffice/tasks/main.yml
+++ b/php-app/roles/dzzoffice/tasks/main.yml
@@ -48,3 +48,15 @@
 - name: Permission file
   shell: find /data/wwwroot -not -type d -exec chmod 640 {} \;
 
+- name: Databases Random Password
+  copy: 
+    src: init.sh
+    dest: /root/
+    mode: 0750
+
+- name: Setting Startup
+  lineinfile:
+    path: /etc/rc.d/rc.local
+    regexp: '/root/init.sh'
+    line: '/root/init.sh'
+    mode: 0750
