--- a/Ansible-wordpress/roles/wordpress/vars/main.yml
+++ b/Ansible-wordpress/roles/wordpress/vars/main.yml
@@ -1,7 +1,7 @@
 ---
 # theme变量的取值范围：twentynineteen、avada、porto
-theme: 'avada'
+theme: 'twentynineteen'
 
 # web应用类型: apache、nginx
-web: 'apache'
+web: 'nginx'
 
