--- a/Ansible-wordpress/roles/wordpress/tasks/main.yml
+++ b/Ansible-wordpress/roles/wordpress/tasks/main.yml
@@ -3,6 +3,12 @@
 - name: System Upgrade
   yum: name=* state=latest
 
+# 获取Web服务器类型
+- name: Get WebServer
+  shell: nginx -v
+  register: nginx_ver
+  ignore_errors: yes
+
 # 下载源文件
 - name: Download wordpress which include default theme
   unarchive:
@@ -37,8 +43,8 @@
   template:
     src: default-constants.php
     dest: /data/wwwroot/wordpress/wp-includes/default-constants.php
-    owner: apache
-    group: apache
+    owner: root
+    group: root
     mode: 0640
 
 - name: Remove example dir
@@ -46,30 +52,36 @@
     path: /data/wwwroot/www.example.com
     state: absent
 
-- name: Copy Apache Vhost Configuration
-  template: src=vhost.conf dest=/etc/httpd/vhost/vhost.conf
-  notify: restart Apache
-  when: web == 'apache'
-
-- name: Copy nginx Vhost Configuration
-  template: src=default.conf dest=/etc/nginx/conf.d/default.conf
+# ====================apache and nginx==========================================#
+- name: Copy Nginx Vhost Configuration
+  template: src=default.conf dest=/etc/nginx/conf.d/
   notify: restart nginx
-  when: web == 'nginx'
+  when: nginx_ver.stderr.find('nginx version') != -1
 
 - name: Copy Apache Vhost Configuration
+  template: src=vhost.conf dest=/etc/httpd/vhost/
+  notify: restart Apache
+  when: nginx_ver.stderr.find('command not found') != -1 or nginx_ver.stderr.find('未找到命令') != -1
+# ============================================================================#
+
+- name: Copy PHP.ini Template
   template: src=php.ini dest=/etc/php.ini
+
+- name: Copy WordPress config file
+  template: src=wp-config.php dest=/data/wwwroot/wordpress/
+
+- name: Obtain mysql root's password
+  shell: cat /root/password.txt | awk -F ":" '{print $2}'
+  register: mysql_root_password
 
 - name: Create wordpress databases
   mysql_db:
     login_user: root
-    login_password: 123456
+    login_password: "{{ mysql_root_password.stdout }}"
     name: wordpress
     state: present
 
-- name: Copy WordPress config file
-  template: src=wp-config.php dest=/data/wwwroot/wordpress/ owner=apache group=apache
-
-- name: Copy databases initialization
+- name: Copy databases initialization.sh
   copy:
     src: init.sh
     dest: /root
@@ -82,28 +94,30 @@
     line: '/root/init.sh'
     mode: 0770
 
-
 - name: Change 9panel 
   lineinfile:
     path: /data/apps/9panel/js/websoft9.js
     regexp: '{"appname":"WordPress","switch":0,'
     line: '{"appname":"WordPress","switch":1,'
 
-- name: Change Permission of directory for Apache
-  file: 
-    path: /data/wwwroot
-    owner: apache
-    group: apache
-    recurse: yes
-  when: web == 'apache'
 
-- name: Change Permission of directory for Nginx
-  file: 
-    path: /data/wwwroot
-    owner: nginx
-    group: nginx
-    recurse: yes
-  when: web == 'nginx'
+# ====================apache and nginx==========================================#
+- name: change Nginx owner
+  shell: chown nginx. -R /data/wwwroot
+  when: nginx_ver.stderr.find('nginx version') != -1
+
+- name: change Apache owner
+  shell: chown apache. -R /data/wwwroot
+  when: nginx_ver.stderr.find('command not found') != -1 or nginx_ver.stderr.find('未找到命令') != -1
+
+- name: restart Apache
+  service: name=httpd state=restarted enabled=yes
+  when: nginx_ver.stderr.find('command not found') != -1 or nginx_ver.stderr.find('未找到命令') != -1
+
+- name: restart Nginx
+  service: name=nginx state=restarted enabled=yes
+  when: nginx_ver.stderr.find('nginx version') != -1 
+# ==========================+=================================================#
 
 - name: Permission directory 750
   shell: find /data/wwwroot -type d -exec chmod 750 {} \;
