add aws for trac

--- a/ansible-trac/roles/mysql/tasks/main.yml
+++ b/ansible-trac/roles/mysql/tasks/main.yml
@@ -60,7 +60,7 @@
   notify: restart MySQL
 
 - name: create database
-  shell: mysql -uroot -p123456 -e "CREATE DATABASE trac CHARACTER SET utf8 COLLATE utf8_bin;"
+  command: mysql -uroot -p123456 -e "CREATE DATABASE trac CHARACTER SET utf8 COLLATE utf8_bin;"
 
 - name: Setting File Permission
   shell: find /data/mysql -type f -exec chmod 640 {} \;
